# mlir

./: CMakeLists.txt
constellation/: CMakeLists.txt
constellation/include/constellation/: ConstCommon.h  ConstellationDialect.h  ConstellationOps.h  ConstexprUtils.h  EnumUtils.h  IO.h  Intrinsics.h  Lattice.h  Memory.h  OpCommon.h
constellation/include/constellation/Spatial/: CodeTemplates.h  SpatialBackend.h  SpatialEmitSupport.h  SpatialLocationPass.h
constellation/include/constellation/Spatial/templates/: AccelTransferAccelToHost.inja  AccelTransferHostToAccel.inja  Arg.inja  DRAM.inja  GenericCall.inja  HostIO.inja  HostTransferAccelToHost.inja  HostTransferHostToAccel.inja  Read.inja  Top.inja  Top.scala
constellation/include/constellation/core/: Backend.h  ConstCommon.h  ConstellationDialect.h  ConstellationOps.h  EnumUtils.h  IO.h  Intrinsics.h  Lattice.h  Memory.h  OpCommon.h  OpUtils.h  Types.h  ValueIDPass.h
constellation/lib/: CMakeLists.txt  ConstellationDialect.cpp  IO.cpp  Lattice.cpp
constellation/lib/Spatial/: CMakeLists.txt  SpatialBackend.cpp  SpatialEmitSupport.cpp  SpatialLocationPass.cpp
constellation/lib/core/: CMakeLists.txt  ConstellationDialect.cpp  IO.cpp  Lattice.cpp  ValueIDPass.cpp
constellation/test/: CMakeLists.txt  ConstellationInputExample.cpp  IO1.cpp  Lattice1.cpp
constellation/test/Spatial/: CMakeLists.txt  SimpleFuncGen.cpp
constellation/test/core/: CMakeLists.txt  IO1.cpp  Lattice1.cpp
constellation/test/test_include/: TestHarness.h
include/mlir/IR/: DialectTypeRegistry.def
